--- a/Config/translation/FR_fr/studentfilter.yml
+++ b/Config/translation/FR_fr/studentfilter.yml
@@ -7,9 +7,12 @@
 #       ## #     # #     # #     #    #       #    # #     #  #
 #       ## #     # #     # #     #   #       #     # ######   # @Last Modified by:   revers
 #  ####### #     # #     # #     #  #       #      # #        #
-#  ######   #####   ######  #####  ####### ####### # #######  # @Last Modified time: 2015-10-18 12:01:03
+#  ######   #####   ######  #####  ####### ####### # #######  # @Last Modified time: 2015-11-04 14:58:31
 ###############################################################
 
 view : '{{url}}'
 update : '{{url}}'
 StudentFilters: Filtres étudiant
+
+timeline:
+	button: Voir le profil
