--- a/Config/translation/EN_us/studentfilter.yml
+++ b/Config/translation/EN_us/studentfilter.yml
@@ -7,13 +7,22 @@
 #       ## #     # #     # #     #    #       #    # #     #  #
 #       ## #     # #     # #     #   #       #     # ######   # @Last Modified by:   revers
 #  ####### #     # #     # #     #  #       #      # #        #
-#  ######   #####   ######  #####  ####### ####### # #######  # @Last Modified time: 2015-11-04 14:58:15
+#  ######   #####   ######  #####  ####### ####### # #######  # @Last Modified time: 2015-11-09 14:19:02
 ###############################################################
 
-view : '{{url}}'
-update : '{{url}}'
-StudentFilters: Filtres étudiants
+page:
+	title:
+		view : '{{url}}'
+		update : '{{url}}'
+		StudentFilters: Filtres étudiants
 levels: Etudiant
 
 timeline:
 	button: View profile
+	nodescription: Pas de description
+
+view:
+	skills : Skills
+	challenges: Challenges
+	actions:
+		edit: Edit filter
