--- a/Config/translation/FR_fr/studentfilter.yml
+++ b/Config/translation/FR_fr/studentfilter.yml
@@ -7,12 +7,21 @@
 #       ## #     # #     # #     #    #       #    # #     #  #
 #       ## #     # #     # #     #   #       #     # ######   # @Last Modified by:   revers
 #  ####### #     # #     # #     #  #       #      # #        #
-#  ######   #####   ######  #####  ####### ####### # #######  # @Last Modified time: 2015-11-04 14:58:31
+#  ######   #####   ######  #####  ####### ####### # #######  # @Last Modified time: 2015-11-09 14:19:11
 ###############################################################
 
-view : '{{url}}'
-update : '{{url}}'
-StudentFilters: Filtres étudiant
+page:
+	title:
+		view : '{{url}}'
+		update : '{{url}}'
+		StudentFilters: Filtres étudiant
 
 timeline:
 	button: Voir le profil
+	nodescription: Pas de description
+
+view:
+	skills : Compétences
+	challenges: Défis
+	actions:
+		edit: Editer le filtre
