I dont know when i lost my code

--- a/Config/translation/FR_fr/form/title.yml
+++ b/Config/translation/FR_fr/form/title.yml
@@ -7,10 +7,11 @@
 #       ## #     # #     # #     #    #       #    # #     #  #
 #       ## #     # #     # #     #   #       #     # ######   # @Last Modified by:   revers
 #  ####### #     # #     # #     #  #       #      # #        #
-#  ######   #####   ######  #####  ####### ####### # #######  # @Last Modified time: 2015-10-18 12:33:22
+#  ######   #####   ######  #####  ####### ####### # #######  # @Last Modified time: 2015-11-21 15:19:35
 ###############################################################
 
 studentfilter :
 	create: 'Creér un filtre étudiant'
 	edit: 'Editer filtre étudiant'
 	search: 'Rechercher des filtres étudiant'
+	delete: Supprimer le filtre étudiant
