--- a/Config/translation/FR_fr/studentfilter.yml
+++ b/Config/translation/FR_fr/studentfilter.yml
@@ -7,7 +7,7 @@
 #       ## #     # #     # #     #    #       #    # #     #  #
 #       ## #     # #     # #     #   #       #     # ######   # @Last Modified by:   revers
 #  ####### #     # #     # #     #  #       #      # #        #
-#  ######   #####   ######  #####  ####### ####### # #######  # @Last Modified time: 2015-11-09 14:19:11
+#  ######   #####   ######  #####  ####### ####### # #######  # @Last Modified time: 2015-11-21 15:19:22
 ###############################################################
 
 page:
@@ -24,4 +24,5 @@ view:
 	skills : Compétences
 	challenges: Défis
 	actions:
-		edit: Editer le filtre
+		edit: Editer le filtre étudiant
+		delete: Supprimer le filtre étudiant
