--- a/Config/translation/EN_us/form/title.yml
+++ b/Config/translation/EN_us/form/title.yml
@@ -7,10 +7,11 @@
 #       ## #     # #     # #     #    #       #    # #     #  #
 #       ## #     # #     # #     #   #       #     # ######   # @Last Modified by:   revers
 #  ####### #     # #     # #     #  #       #      # #        #
-#  ######   #####   ######  #####  ####### ####### # #######  # @Last Modified time: 2015-10-18 10:50:34
+#  ######   #####   ######  #####  ####### ####### # #######  # @Last Modified time: 2015-11-21 15:19:03
 ###############################################################
 
 studentfilter :
 	create: 'Create a student filter'
 	edit: 'Edit a student filter'
 	search: 'Search a student filters'
+	delete: Delete student filter
