--- a/Config/translation/EN_us/studentfilter.yml
+++ b/Config/translation/EN_us/studentfilter.yml
@@ -7,7 +7,7 @@
 #       ## #     # #     # #     #    #       #    # #     #  #
 #       ## #     # #     # #     #   #       #     # ######   # @Last Modified by:   revers
 #  ####### #     # #     # #     #  #       #      # #        #
-#  ######   #####   ######  #####  ####### ####### # #######  # @Last Modified time: 2015-11-09 14:19:02
+#  ######   #####   ######  #####  ####### ####### # #######  # @Last Modified time: 2015-11-21 15:18:37
 ###############################################################
 
 page:
@@ -26,3 +26,4 @@ view:
 	challenges: Challenges
 	actions:
 		edit: Edit filter
+		delete: Delete filter
